--- a/LionTee/Base.lproj/Main.storyboard
+++ b/LionTee/Base.lproj/Main.storyboard
@@ -5,12 +5,12 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6243"/>
     </dependencies>
     <scenes>
-        <!--Main View Controller-->
+        <!--123-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController storyboardIdentifier="MainViewController" id="vXZ-lx-hvc" customClass="MainViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" tag="2000" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" id="wVS-8m-Mtz">
@@ -323,7 +323,7 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="B1z-jk-fPO">
                                                 <rect key="frame" x="186" y="52" width="125" height="42"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" backgroundImage="D31D784D-8AEE-4D41-B01A-D87CAFC938C9">
+                                                <state key="normal" backgroundImage="91E26367-17A0-455D-B739-8EB712466C4A">
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                                 <connections>
@@ -409,35 +409,6 @@
                                     </view>
                                 </subviews>
                             </view>
-                            <navigationBar contentMode="scaleToFill" id="MVT-hH-TPV">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Men's Crewneck" id="HRi-Z3-wHJ">
-                                        <barButtonItem key="rightBarButtonItem" style="plain" id="GEE-DF-aGP">
-                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="K5B-HL-nDw">
-                                                <rect key="frame" x="244" y="12" width="40" height="20"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                                <state key="normal" title="$19.99">
-                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                                        <integer key="value" value="1"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                        <integer key="value" value="5"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                </userDefinedRuntimeAttributes>
-                                                <connections>
-                                                    <action selector="onPurchase:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="f9V-cF-nng"/>
-                                                </connections>
-                                            </button>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <view contentMode="scaleToFill" id="E9R-jg-Teo" userLabel="Font Settings">
                                 <rect key="frame" x="0.0" y="467" width="320" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -496,7 +467,8 @@
                         </subviews>
                         <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="xQb-LX-pFd"/>
+                    <navigationItem key="navigationItem" title="123" id="xQb-LX-pFd"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="_page" destination="xwX-Lg-mbM" id="NaO-Yg-vm9"/>
@@ -504,7 +476,6 @@
                         <outlet property="_sliderSize" destination="OCO-hz-lqx" id="aEx-Va-cMW"/>
                         <outlet property="_txtTitle" destination="9E2-7q-72L" id="ZqQ-Cb-L5n"/>
                         <outlet property="applePayView" destination="IEh-GD-9B4" id="oZf-b9-GpA"/>
-                        <outlet property="basePriceButton" destination="K5B-HL-nDw" id="afS-bY-rbF"/>
                         <outlet property="colorButton" destination="FSI-Qv-TXw" id="3yT-TO-Uca"/>
                         <outlet property="colorPanelButton" destination="LaU-cm-csM" id="oXv-F2-qXz"/>
                         <outlet property="editOrderView" destination="jG0-sn-Snk" id="TGB-2Q-yMt"/>
@@ -922,13 +893,6 @@
                                     <action selector="onCheckboxClicked:" destination="9m2-gg-8u2" eventType="touchUpInside" id="JsR-kx-hmH"/>
                                 </connections>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="N30-ZY-DQp">
-                                <rect key="frame" x="16" y="15" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                         </subviews>
                     </view>
                     <navigationItem key="navigationItem" id="ra9-yz-w9v"/>
@@ -1129,7 +1093,7 @@
             <objects>
                 <viewController id="zOJ-94-SyG" customClass="OrderConfirmationViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Sz6-W1-Xbb">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Order-Confirmation-5.png" id="vvx-rS-iQS">
@@ -1205,7 +1169,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="D31D784D-8AEE-4D41-B01A-D87CAFC938C9" width="299" height="98">
+        <image name="91E26367-17A0-455D-B739-8EB712466C4A" width="299" height="98">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
